# llama-grpo-math

./: .gitignore  .pre-commit-config.yaml  README.md  cmd  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.sh
docs/: grpo_deep_research.md
src/: __init__.py  __main__.py  evaluate.py  load_model.py  train.py
tests/src/: test_dataset.py  test_end_to_end.py  test_evaluate.py  test_model.py  test_train.py
