[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llama-grpo-math"
version = "0.1.0"
description = "Fine-tuning Llama models for mathematical reasoning"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.scripts]
llama-grpo-math = "src.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0"
transformers = ">=4.30.0"
peft = ">=0.4.0"
datasets = ">=2.7.0"
accelerate = ">=0.20.0"
tqdm = ">=4.64.0"
sentencepiece = "*"
bitsandbytes = ">=0.39.0"
pandas = ">=2.0.0"
matplotlib = ">=3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.0"
mypy = ">=1.5.0"
pre-commit = ">=3.3.0"
pandas-stubs = ">=2.0.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
